--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
       <tr>
         <th>
           <div class="scroll-container">
-            <img src="img_5terre.jpg" alt="Cinque Terre" width="200" height="auto">
-            <img src="img_forest.jpg" alt="Forest" width="200" height="auto">
-            <img src="img_lights.jpg" alt="Northern Lights" width="200" height="auto">
-            <img src="img_mountains.jpg" alt="Mountains" width="200" height="auto">
-            <img src="img_mountains.jpg" alt="Mountains" width="200" height="auto">
+            <img src="couch.jpg" alt="couch" width="200" height="auto">
+            <img src="phone.jpg" alt="phone" width="200" height="auto">
+            <img src="elevator.jpg" alt="elevator" width="200" height="auto">
+            <img src="jacket.jpg" alt="jacket" width="200" height="auto">
+            <img src="disco.jpg" alt="disco" width="200" height="auto">
             <img src="img_mountains.jpg" alt="Mountains" width="200" height="auto">
             <img src="img_mountains.jpg" alt="Mountains" width="200" height="auto">
           </div>
