--- a/index.html
+++ b/index.html
@@ -93,8 +93,6 @@
       div.scroll-container img {
         padding: 10px;
       }
-      
-      
     </style>
   </head>
   <body>
@@ -116,10 +114,16 @@
             <img src="elevator.jpg" alt="elevator" width="200" height="auto">
             <img src="jacket.jpg" alt="jacket" width="200" height="auto">
             <img src="disco.jpg" alt="disco" width="200" height="auto">
-            <img src="img_mountains.jpg" alt="Mountains" width="200" height="auto">
-            <img src="img_mountains.jpg" alt="Mountains" width="200" height="auto">
           </div>
         </th>
+      </tr>
+      <tr>
+        <th>
+          <p>
+            short description
+          </p>
+        </th>
+      </tr>
       </tr>
     </table>
 
