--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
       div.scroll-container {
         background-color: white;
-        overflow: auto;
+        overflow: scroll;
         white-space: nowrap;
         padding: 10px;
       }
