--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <tr>
         <th style="width: 33%;"><img src="Book Cover.jpg" alt="book" style="width: 100%"></th>
         <th>
-          <p> audio description</p>
+          <p> audio description you smelllll</p>
         </th>
       </tr>
     </table>
