--- a/index.html
+++ b/index.html
@@ -105,9 +105,6 @@
     </ul>
 
     <h2 style="text-align: left; margin-bottom: 0px;">Work the Shot</h2>
-    <table style="width:100%">
-      <tr>
-        <th>
           <div class="scroll-container">
             <img src="couch.jpg" alt="couch" width="200" height="auto">
             <img src="phone.jpg" alt="phone" width="200" height="auto">
@@ -115,17 +112,8 @@
             <img src="jacket.jpg" alt="jacket" width="200" height="auto">
             <img src="disco.jpg" alt="disco" width="200" height="auto">
           </div>
-        </th>
-      </tr>
-      <tr>
-        <th>
-          <p>
-            short description
-          </p>
-        </th>
-      </tr>
-      </tr>
-    </table>
+
+            <p>short description</p>
 
     <a href="https://soundcloud.com/audrey-whitman-152629317/life-in-emerson-chapter-3-grandmas-house/s-HUCCvKeHtEX?si=01a9aed9e3c542489a0e9acb3b73c8bb&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
       <h2 style="text-align: left; margin-bottom: 0px;">Sounds Like</h2>
