--- a/index.html
+++ b/index.html
@@ -105,14 +105,20 @@
     </ul>
 
     <h2 style="text-align: left; margin-bottom: 0px;">Work the Shot</h2>
-          <div class="scroll-container" style="border: 5px solid #d3d3d3;">
-            <img src="couch.jpg" alt="couch" width="200" height="auto">
-            <img src="phone.jpg" alt="phone" width="200" height="auto">
-            <img src="elevator.jpg" alt="elevator" width="200" height="auto">
-            <img src="jacket.jpg" alt="jacket" width="200" height="auto">
-            <img src="disco.jpg" alt="disco" width="200" height="auto">
-         <p>short description</p>
+    <div class="scroll-container" style="border: 5px solid #d3d3d3;">
+      <img src="couch.jpg" alt="couch" width="200" height="auto">
+      <img src="phone.jpg" alt="phone" width="200" height="auto">
+      <img src="elevator.jpg" alt="elevator" width="200" height="auto">
+      <img src="disco.jpg" alt="disco" width="200" height="auto">
+      <img src="jacket.jpg" alt="jacket" width="200" height="auto">
+      <img src="laying.jpg" alt="laying" width="200" height="auto">
+      <img src="reading.jpg" alt="reading" width="200" height="auto">
+      <img src="thinking.jpg" alt="thinking" width="200" height="auto">
     </div>
+    <p style="border: 5px solid #d3d3d3;"><strong>This project introduced me to professional photography. This was my first real experience working with a DSLR camera and properly using the settings to capture
+        high-quality images. I caputred different images based on the outline of the project, including; portrait photos, product photos and landscape settings. I decided to use a retro theme for this assignment
+        and chose my setting accordingly. The photos above were included in my work and were taken at <a href="https://lostvessel.com/">Loss Vessel</a> in Uptown Waterloo.</strong></p>
+
 
     <a href="https://soundcloud.com/audrey-whitman-152629317/life-in-emerson-chapter-3-grandmas-house/s-HUCCvKeHtEX?si=01a9aed9e3c542489a0e9acb3b73c8bb&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
       <h2 style="text-align: left; margin-bottom: 0px;">Sounds Like</h2>
@@ -121,7 +127,10 @@
       <tr>
         <th style="width: 33%;"><img src="Book Cover.jpg" alt="book" style="width: 100%"></th>
         <th>
-          <p> audio description you smelllll</p>
+          <p> "Sounds Like" was our third assignment in GBDA201. I chose to create an audio book episode capturing one of my grandfathers stories from his youth. I learned how quality audio is produced and
+            layered. I included a reading, sound effects, and background ambiance to transport listeners to Emerson Manitoba. </p>
+          <p>During the editing phase of this project I learned a lot about Adobe Premiere Pro
+            and its functions. Matching, stabilizing and remixing audio recordings is possible with the help of this application and made a big difference in the quality of my work. </p>
         </th>
       </tr>
     </table>
@@ -134,7 +143,7 @@
         <th style="width: 33%;"><video width="100%" height="auto" autoplay>
             <source src="documentary.mov" loop></video></th>
         <th>
-          <p> documentary description</p>
+          <p>The final project in GBDA201 was a group documentary for which I was the director. I took a leadership role in setting up times, dates, location, equipment planning, and story direction. My group and I highlighted a gentleman named Greg Henhawk who is a big personality in the world of indigenous sport and advocation. Time was put into filming days 1 and 2 as well as editing days. linked above is the <a href="https://youtu.be/Y7cTtE95Yrw">final cut.</a></p>
         </th>
       </tr>
     </table>
