--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <li><a href="https://audreywhitman.github.io/Audrey/" style="color: white;">Home</a></li>
       <li><a href="https://audreywhitman.github.io/Website-Design/" style="color: white;">Website Design</a></li>
       <li><a href="https://audreywhitman.github.io/GBDA201/" style="color: white;">GBDA201</a></li>
-      <li><a href="#about" style="color: white;">Blog 203</a></li>
+      <li><a href="https://audreywhitman.github.io/Blog-203/" style="color: white;">Blog 203</a></li>
     </ul>
 
     <h2 style="text-align: left; margin-bottom: 0px;">Work the Shot</h2>
