--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         and chose my setting accordingly. The photos above were included in my work and were taken at <a href="https://lostvessel.com/">Loss Vessel</a> in Uptown Waterloo.</strong></p>
 
 
-    <a href="https://soundcloud.com/audrey-whitman-152629317/life-in-emerson-chapter-3-grandmas-house/s-HUCCvKeHtEX?si=01a9aed9e3c542489a0e9acb3b73c8bb&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+    <a href="https://soundcloud.com/audrey-whitman-152629317/life-in-emerson-chapter-3-grandmas-house/s-HUCCvKeHtEX?si=01a9aed9e3c542489a0e9acb3b73c8bb&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target:"_blank">
       <h2 style="text-align: left; margin-bottom: 0px;">Sounds Like</h2>
     </a>
     <table style="width:100%">
@@ -135,7 +135,7 @@
       </tr>
     </table>
 
-    <a href="https://youtu.be/Y7cTtE95Yrw">
+    <a href="https://youtu.be/Y7cTtE95Yrw" target:"_blank">
       <h2 style="text-align: left; margin-bottom: 0px;">The Danger of a Single Story</h2>
     </a>
     <table style="width:100%">
